
2015-09-07  Kugan Vivekanandarajah  <kuganv@linaro.org>

	* tree-vrp.c (extract_range_from_binary_expr_1): Handle SEXT_EXPR.
	(simplify_bit_ops_using_ranges): Likewise.
	(simplify_stmt_using_ranges): Likewise.
	* match.pd (sext (sext@2 @0 @1) @3)): Simplify.

2016-03-30  Kugan Vivekanandarajah  <kuganv@linaro.org>

	* cfgexpand.c (expand_debug_expr): Handle SEXT_EXPR.
	* expr.c (expand_expr_real_2): Likewise.
	* fold-const.c (int_const_binop_1): Likewise.
	* tree-cfg.c (verify_gimple_assign_binary): Likewise.
	* tree-inline.c (estimate_operator_cost): Likewise.
	* tree-pretty-print.c (dump_generic_node): Likewise.
	(op_symbol_code): Likewise.
	* tree.def: Define new tree code SEXT_EXPR.

2016-03-30  Jan Hubicka  <hubicka@ucw.cz>

	* tree-ssa-loop-niter.c (idx_infer_loop_bounds): We can't get realistic
	estimates here.
	* tree-ssa-loop-unswitch.c (tree_unswitch_single_loop): Use also
	max_loop_iterations_int.
	(tree_unswitch_outer_loop): Likewise.
	* tree-ssa-loop-ivopts.c (avg_loop_niter): Likewise.
	* tree-vect-loop.c (vect_analyze_loop_2): Likewise.

2016-03-30  Richard Biener  <rguenther@suse.de>

	PR middle-end/70450
	* fold-const.c (extract_muldiv_1): Fix thinko in wide_int::from
	usage.

2016-03-30  Jakub Jelinek  <jakub@redhat.com>

	PR target/70421
	* config/i386/i386.c (ix86_expand_vector_set): Fix up argument order
	in gen_blendm expander.

2016-03-30  Nick Clifton  <nickc@redhat.com>

	PR target/62254
	* config/arm/arm.c (arm_reload_out_hi): Add code to handle the
	case where we are already provided with an SImode SUBREG.

2016-03-30  Michael Matz  <matz@suse.de>
	    Richard Biener  <rguenther@suse.de>

	PR ipa/12392
	* ipa-polymorphic-call.c (struct type_change_info): Change
	speculative to an unsigned allowing to limit the work we do.
	(csftc_abort_walking_p): New inline function..
	(check_stmt_for_type_change): Limit the number of may-defs
	skipped for speculative devirtualization to
	max-speculative-devirt-maydefs.